<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_search_query_default"
        android:key="@string/settings_search_query_key"
        android:title="@string/settings_search_query_label"
        android:selectAllOnFocus="true"
        android:inputType="textCapSentences"
        android:maxLines="1"/>

    <ListPreference
        android:defaultValue="@string/settings_order_by_list_default"
        android:key="@string/settings_order_by_list_key"
        android:title="@string/settings_order_by_list_label"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"/>

</PreferenceScreen>